<resources>
    <string name="app_name">Twit-Tok</string>
    <string name="title_add_twok">Add Twok</string>
    <string name="title_wall">Wall</string>
    <string name="title_profile">Profile</string>
    <string name="picture">Picture</string>
    <string name="name">Name</string>
    <string name="insert_name">Insert your name</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="choose">Choose</string>
    <string name="map">Map</string>
    <string name="defaultUsername">Username</string>
    <string name="follow">Follow</string>
    <string name="alignHorizontal" />
    <string name="align_vertical">Align vertical</string>
    <string name="changeSize">Change size</string>
    <string name="changeFont">Change font</string>
    <string name="insertCoordinates">Insert coordinates</string>
    <string name="insertNewText">Insert new Text</string>
    <string name="edit_background_color">Edit Background Color</string>
    <string name="edit_text_color">Edit text color</string>
    <string name="new_twok">New Twok</string>
    <string name="insert_new_twok">Insert new Twok</string>
    <string name="permission_error_dialog">You must provide permission to be able to integrate position in new twok.</string>
    <string name="Close_dialog_ok">OK</string>
    <string name="your_current_position">Your current position</string>
    <string name="current_location">Current location</string>
    <string name="close_position_dialog">Close</string>
    <string name="coordinates_not_available">Coordinates not available</string>
    <string name="unfollow">Unfollow</string>
    <string name="updating">Updating...</string>
    <string name="Invalid_twok">Invalid twok, unable to sent twok.</string>
    <string name="offline_advice">You\'re offline, check your connection and try again</string>
    <string name="reload_app">Reload app</string>
</resources>