<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_add_twok">

    <fragment
        android:id="@+id/navigation_add_twok"
        android:name="com.example.twit_tok.presentation.NewTwok.NewTwokFragment"
        android:label="@string/title_add_twok"
        tools:layout="@layout/fragment_new_twok" />

    <fragment
        android:id="@+id/navigation_wall"
        android:name="com.example.twit_tok.presentation.wall.WallFragment"
        android:label="@string/title_wall"
        tools:layout="@layout/fragment_wall" />

    <fragment
        android:id="@+id/navigation_userwall"
        android:name="com.example.twit_tok.presentation.user_wall.UserWallFragment"
        android:label="User wall"
        tools:layout="@layout/fragment_user_wall" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.twit_tok.presentation.Profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>